Fix some UI/UX errors
- Edit buttons to save and cancel no longer submit the form
- "More channels" link has 100% width again
- Fix "New messages" button to overlaps date division
- Fix "Jump to recent messages" to 100% with again

--- a/packages/rocketchat-theme/assets/stylesheets/base.less
+++ b/packages/rocketchat-theme/assets/stylesheets/base.less
@@ -1308,6 +1308,7 @@ a.github-fork {
 	}
 	.more {
 		display: block;
+		width: 100%;
 		font-size: 11px;
 		padding: 4px 0 4px 10px;
 		margin-top: 2px;
@@ -2424,6 +2425,7 @@ a.github-fork {
 		cursor: pointer;
 		bottom: 8px;
 		left: 50%;
+		z-index: 15;
 		.transition(transform 0.3s ease-out);
 		.transform(translateY(0));
 		&.not {
@@ -2444,7 +2446,7 @@ a.github-fork {
 		right: 20px;
 		border-top-left-radius: 4px;
 		border-top-right-radius: 4px;
-		span {
+		button {
 			cursor: pointer;
 		}
 		.transition(transform 0.3s ease-out);
